# CraftingInterpreters

./: .gitignore  README.md
answers/: Chapter 1.md  Chapter 2.md  Chapter 3.md
lox/chapter3/: binary_search_tree.lox  fizz_buzz.lox  linked_list.lox
misc/CDoublyLinkedList/: CMakeLists.txt  library.c  library.h  test_list.c
misc/CHelloWorld/: CMakeLists.txt
